# edar

./: .gitignore  Cargo.toml  README.md  execute-tests.yml
.ls/: .rustc_info.json
.ls/debug/.fingerprint/byteorder-b4e4d36e219df6ff/: lib-byteorder
.ls/debug/.fingerprint/cfg-if-8c106a0aa6df78e9/: lib-cfg_if.json
.ls/debug/.fingerprint/crc32fast-32be1a54ba02039f/: lib-crc32fast.json
.ls/debug/.fingerprint/crc32fast-b2520ba5e2f57e6e/: build-script-build-script-build.json
.ls/debug/.fingerprint/crc32fast-c895ad404100caec/: run-build-script-build-script-build  run-build-script-build-script-build.json
.ls/debug/.fingerprint/data-encoding-c456abf4e91da2bc/: lib-data_encoding.json
.ls/debug/.fingerprint/edar-3b7a09a499b92952/: dep-test-lib-edar  test-lib-edar.json
.ls/debug/.fingerprint/edar-e0974602c47f6c80/: dep-lib-edar  lib-edar.json
.ls/debug/.fingerprint/edar-fd9d573a106ecb38/: dep-test-integration-test-mp3_test  test-integration-test-mp3_test.json
.ls/debug/.fingerprint/flate2-0bc917f224adc65a/: lib-flate2  lib-flate2.json
.ls/debug/.fingerprint/lofty-078e7ec1839c0641/: lib-lofty  lib-lofty.json
.ls/debug/.fingerprint/lofty_attr-090eef1997d530c6/: lib-lofty_attr
.ls/debug/.fingerprint/log-034efab62c7fbfc8/: lib-log.json
.ls/debug/.fingerprint/miniz_oxide-8664412c430af2a6/: lib-miniz_oxide.json
.ls/debug/.fingerprint/ogg_pager-67819e49c45cb7a6/: lib-ogg_pager  lib-ogg_pager.json
src/: lib.rs
src/metadata/: extractor.rs  mod.rs  mp3.rs
tests/: .rustc_info.json  metadata_test.rs  mp3_test.rs
tests/assets/: test_song.flac
(+34 files in other folders)
